--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["application"]
+    "bin": ["builds/application"]
 }
