--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "laravel-zero/framework": "^9.2",
         "guzzlehttp/guzzle": "^7.4",
         "illuminate/http": "^9.0",
         "intonate/tinker-zero": "^1.2",
         "surgiie/console": "^0.16.0"
     },
     "require-dev": {
+        "laravel-zero/framework": "^9.2",
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4.4",
         "pestphp/pest": "^1.21.3"
@@ -36,5 +36,5 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["application"]
+    "bin": ["builds/application"]
 }
